# yolo_pose

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
yolo_pose/: yolo_pose_node.py
